--- a/code/css/navBar.css
+++ b/code/css/navBar.css
@@ -2,3 +2,15 @@ header{
   background-color:  #2c3e50;
 
 }
+
+
+.myNav  button{
+  font-size: 25px !important;
+}
+.myNav {
+  font-size: 25px !important;
+}
+
+.title{
+  font-size: 35px !important;
+}
