supprimer une tache public par un annoyme faite

--- a/code/css/homeList.css
+++ b/code/css/homeList.css
@@ -30,10 +30,26 @@ i {
 }
 
 .detailsAdd{
-    width: 30%;
+
     padding: 5px 0px !important;
-    position: relative;
-    z-index: 1;
+    color: #fff;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none;
+}
+.detailsAdd:hover{
+    color: #ff5722;
+    transition: 0.6s all;
+}
+.detailsAdd::before{
+    width: 5px ;
+    height: 100%;
+    background-coLor: #ff5722;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 0.6s all;
 }
 .details h2{
     font-size: 22px;
