--- a/code/css/tache.css
+++ b/code/css/tache.css
@@ -9,12 +9,6 @@ body {
     background-color:  #2c3e50 !important;
     ;
 }
-
-i {
-    font-style: italic;
-}
-
-
 .container{
     
     margin-top:100px;
@@ -22,7 +16,6 @@ i {
 
 .card {
     box-shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03), 0 0.9375rem 1.40625rem rgba(4, 9, 20, 0.03), 0 0.25rem 0.53125rem rgba(4, 9, 20, 0.05), 0 0.125rem 0.1875rem rgba(4, 9, 20, 0.03);
-    border-width: 0;
     transition: all .2s;
 }
 
@@ -169,6 +162,7 @@ i {
     background-color: #fff;
 }
 
-.strikeThrough:checked + .strikeThroughText p{
+.strikeThrough:checked + .strikeThroughText{
     text-decoration: line-through;
 }
+
